# gcmd

./: Cargo.toml  build.rs
src/: chunk.rs  chunker.rs  error.rs  lib.rs  main.rs  markdown_chunker.rs  paragraph_split.rs
