[package]
name = "gcmd"
version = "0.1.0"
edition = "2021"
authors = ["Scott Beck <scottbeck@gmail.com>"]
description = "Rust markdown chunking library for generative SLMs"
license = "MIT"
repository = "https://github.com/devwits-ai/gcmd.git"

[dependencies]
tokenizers = { version = "0.21.0", features = ["http"] }
serde = "1.0.218"
anyhow = "1.0"
ndarray = "0.16"
ndarray-stats = "0.6"
thiserror = "2.0.12"
once_cell = "1.21.0"
comrak = "0.36.0"
nlprule = { version = "0.6.4", optional = true }

[features]
default = []
nlp = ["dep:nlprule"]
# future consideration
#html = ["dep:html5ever"]
#code = ["dep:syntect"]


[build-dependencies]
nlprule-build = { version = "0.6.4", optional = true }

[profile.release]
lto = "fat"
opt-level = 3     # or "s" for slightly better performance at the cost of size
codegen-units = 1
panic = "abort"
